# survivalkit

./: .clang-format  .gitignore  CMakeLists.txt  README.md  meson.build
include/: sk_cc.h  sk_err.h  sk_error.h  sk_flag.h  sk_healthcheck.h  sk_label.h  sk_label_default.h  sk_lifecycle.h  sk_listener.h  sk_log.h  sk_logger_drv.h
src/: sk_alloc_priv.h  sk_healthcheck.c  sk_healthcheck_priv.h  sk_label.c  sk_lifecycle.c  sk_listener.c  sk_log.c  sk_log_priv.h  sk_logger_drv.c
test/: sk_healthcheck_test.c  sk_label_test.c  sk_lifecycle_test.c  sk_listener_test.c  sk_log_test.c  test.h
